--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "Local Loader",
 	"description": "Load local files for injection into website.",
-	"version": "0.1",
+	"version": "0.2",
 	"permissions": [
 		"storage"
 	],
@@ -28,7 +28,8 @@
         "http://*.newcompte.fr/*"
       ],
       "js": [
-        "page-injector.js"
+        "js/jquery-2.0.3.min.js",
+        "js/page-injector.js"
       ],
       "run_at": "document_end"
     }
