--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
 		"default_popup": "popup.html"
 	},
 	"web_accessible_resources": [
-		"img/icon128.png"
+		"img/icon128.png",
+    "js/require.js"
 	],
 	"content_scripts": [
     {
